# cpp-learning

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LEARNING_PLAN.md  README.md
phase0_environment/docs/: README.md
phase1_basics/: CMakeLists.txt
phase1_basics/01_types_and_auto/: demo.cpp  exercise.cpp
phase1_basics/01_types_and_auto/docs/: README.md
phase1_basics/02_const_and_constexpr/: demo.cpp  exercise.cpp
phase1_basics/02_const_and_constexpr/docs/: README.md
phase1_basics/03_references/: demo.cpp  exercise.cpp
phase1_basics/03_references/docs/: README.md
phase1_basics/04_string_and_string_view/: demo.cpp  exercise.cpp
phase1_basics/04_string_and_string_view/docs/: README.md
phase1_basics/05_optional/: demo.cpp  exercise.cpp
phase1_basics/05_optional/docs/: README.md
phase1_basics/06_control_flow/: demo.cpp  exercise.cpp
phase1_basics/06_control_flow/docs/: README.md
phase1_basics/07_functions/: demo.cpp  exercise.cpp
phase1_basics/07_functions/docs/: README.md
phase1_basics/08_stl_containers_intro/: demo.cpp  exercise.cpp
phase1_basics/08_stl_containers_intro/docs/: README.md
phase2_classes_raii/: CMakeLists.txt
phase2_classes_raii/01_class_basics/: demo.cpp  exercise.cpp
phase2_classes_raii/01_class_basics/docs/: README.md
phase2_classes_raii/02_raii/: demo.cpp  exercise.cpp
phase2_classes_raii/02_raii/docs/: README.md
phase2_classes_raii/03_smart_pointers/: demo.cpp  exercise.cpp
phase2_classes_raii/03_smart_pointers/docs/: README.md
phase2_classes_raii/04_move_semantics/: demo.cpp  exercise.cpp
phase2_classes_raii/04_move_semantics/docs/: README.md
phase3_stl_algorithms/: CMakeLists.txt
phase3_stl_algorithms/01_iterators/: demo.cpp  exercise.cpp
phase3_stl_algorithms/01_iterators/docs/: README.md
phase3_stl_algorithms/02_core_algorithms/: demo.cpp  exercise.cpp
phase3_stl_algorithms/02_core_algorithms/docs/: README.md
phase3_stl_algorithms/03_lambda/: demo.cpp  exercise.cpp
phase3_stl_algorithms/03_lambda/docs/: README.md
phase3_stl_algorithms/04_ranges_cpp20/: demo.cpp  exercise.cpp
phase3_stl_algorithms/04_ranges_cpp20/docs/: README.md
phase4_templates/: CMakeLists.txt
phase4_templates/01_function_templates/: demo.cpp  exercise.cpp
phase4_templates/01_function_templates/docs/: README.md
phase4_templates/02_class_templates/: demo.cpp  exercise.cpp
phase4_templates/02_class_templates/docs/: README.md
phase4_templates/03_concepts_cpp20/: demo.cpp  exercise.cpp
phase4_templates/03_concepts_cpp20/docs/: README.md
phase4_templates/04_constexpr/: demo.cpp  exercise.cpp
phase4_templates/04_constexpr/docs/: README.md
phase4_templates/05_fold_expressions/: demo.cpp  exercise.cpp
phase4_templates/05_fold_expressions/docs/: README.md
phase5_cpp17_library/: CMakeLists.txt
phase5_cpp17_library/01_variant/: demo.cpp  exercise.cpp
phase5_cpp17_library/01_variant/docs/: README.md
phase5_cpp17_library/02_any/: demo.cpp  exercise.cpp
phase5_cpp17_library/02_any/docs/: README.md
phase5_cpp17_library/03_structured_bindings/: demo.cpp  exercise.cpp
phase5_cpp17_library/03_structured_bindings/docs/: README.md
phase5_cpp17_library/04_filesystem/: demo.cpp  exercise.cpp
phase5_cpp17_library/04_filesystem/docs/: README.md
phase5_cpp17_library/05_parallel_algorithms/: demo.cpp  exercise.cpp
phase5_cpp17_library/05_parallel_algorithms/docs/: README.md
phase6_error_handling/: CMakeLists.txt
phase6_error_handling/01_exception_safety/: demo.cpp  exercise.cpp
phase6_error_handling/01_exception_safety/docs/: README.md
phase6_error_handling/02_sanitizers/: demo.cpp
phase6_error_handling/02_sanitizers/docs/: README.md
phase7_projects/01_todo_cli/: CMakeLists.txt  main.cpp
phase7_projects/01_todo_cli/docs/: README.md
phase7_projects/02_thread_pool/: CMakeLists.txt  ThreadPool.hpp  test.cpp
phase7_projects/02_thread_pool/docs/: README.md
phase7_projects/03_csv_parser/: CMakeLists.txt  csv_parser.hpp  test.cpp
phase7_projects/03_csv_parser/docs/: README.md
phase7_projects/04_http_client/: CMakeLists.txt
phase7_projects/04_http_client/docs/: README.md
src/: hello.cpp
