# Phase 1: 基础语法
add_executable(phase1_types_demo 01_types_and_auto/demo.cpp)
add_executable(phase1_types_exercise 01_types_and_auto/exercise.cpp)

add_executable(phase1_const_demo 02_const_and_constexpr/demo.cpp)
add_executable(phase1_const_exercise 02_const_and_constexpr/exercise.cpp)

add_executable(phase1_ref_demo 03_references/demo.cpp)
add_executable(phase1_ref_exercise 03_references/exercise.cpp)

add_executable(phase1_string_demo 04_string_and_string_view/demo.cpp)
add_executable(phase1_string_exercise 04_string_and_string_view/exercise.cpp)

add_executable(phase1_optional_demo 05_optional/demo.cpp)
add_executable(phase1_optional_exercise 05_optional/exercise.cpp)

add_executable(phase1_control_demo 06_control_flow/demo.cpp)
add_executable(phase1_control_exercise 06_control_flow/exercise.cpp)

add_executable(phase1_func_demo 07_functions/demo.cpp)
add_executable(phase1_func_exercise 07_functions/exercise.cpp)

add_executable(phase1_containers_demo 08_stl_containers_intro/demo.cpp)
add_executable(phase1_containers_exercise 08_stl_containers_intro/exercise.cpp)
