# Phase 2: 类与 RAII
add_executable(phase2_class_demo 01_class_basics/demo.cpp)
add_executable(phase2_class_exercise 01_class_basics/exercise.cpp)

add_executable(phase2_raii_demo 02_raii/demo.cpp)
add_executable(phase2_raii_exercise 02_raii/exercise.cpp)

add_executable(phase2_smartptr_demo 03_smart_pointers/demo.cpp)
add_executable(phase2_smartptr_exercise 03_smart_pointers/exercise.cpp)

add_executable(phase2_move_demo 04_move_semantics/demo.cpp)
add_executable(phase2_move_exercise 04_move_semantics/exercise.cpp)
