# Phase 3: STL 算法与迭代器
add_executable(phase3_iter_demo 01_iterators/demo.cpp)
add_executable(phase3_iter_exercise 01_iterators/exercise.cpp)

add_executable(phase3_algo_demo 02_core_algorithms/demo.cpp)
add_executable(phase3_algo_exercise 02_core_algorithms/exercise.cpp)

add_executable(phase3_lambda_demo 03_lambda/demo.cpp)
add_executable(phase3_lambda_exercise 03_lambda/exercise.cpp)

add_executable(phase3_ranges_demo 04_ranges_cpp20/demo.cpp)
add_executable(phase3_ranges_exercise 04_ranges_cpp20/exercise.cpp)
