# Phase 5: C++17 核心库特性
add_executable(phase5_variant_demo 01_variant/demo.cpp)
add_executable(phase5_variant_exercise 01_variant/exercise.cpp)

add_executable(phase5_any_demo 02_any/demo.cpp)
add_executable(phase5_any_exercise 02_any/exercise.cpp)

add_executable(phase5_binding_demo 03_structured_bindings/demo.cpp)
add_executable(phase5_binding_exercise 03_structured_bindings/exercise.cpp)

add_executable(phase5_fs_demo 04_filesystem/demo.cpp)
add_executable(phase5_fs_exercise 04_filesystem/exercise.cpp)

add_executable(phase5_parallel_demo 05_parallel_algorithms/demo.cpp)
add_executable(phase5_parallel_exercise 05_parallel_algorithms/exercise.cpp)
